--- a/addons/stock/data/stock_data.yml
+++ b/addons/stock/data/stock_data.yml
@@ -1,8 +1,10 @@
 -
+
+  create xml ids for demo data that are widely used in tests or in other codes, for more convenience
+-
   !python {model: ir.model.data, id: False}: |
     main_warehouse = self.env['stock.warehouse'].browse(ref('warehouse0'))
 
-    #create xml ids for demo data that are widely used in tests or in other codes, for more convenience
     xml_references = [
         {'name': 'stock_location_stock', 'module': 'stock', 'model': 'stock.location', 'res_id': main_warehouse.lot_stock_id.id},
         {'name': 'stock_location_company', 'module': 'stock', 'model': 'stock.location', 'res_id': main_warehouse.wh_input_stock_loc_id.id},
@@ -18,10 +20,10 @@
             self.create(xml_record)
         #avoid the xml id and the associated resource being dropped by the orm by manually making a hit on it
         self._update_dummy(xml_record['model'], xml_record['module'], xml_record['name'])
-    
+-
+   create the transit location for each company existing
 -
   !python {model: res.company, id: False}: |
-    #create the transit location for each company existing
     companies = self.search([('internal_transit_location_id', '=', False)])
     for company in companies:
         company.create_transit_location()
